[add]added the run command in README.md